cmake_minimum_required(VERSION 3.17)
project(Cpp_principles LANGUAGES C)

#set(CMAKE_CXX_STANDARD 14)

add_subdirectory(Sort)
add_subdirectory(drafts)



#SET_TARGET_PROPERTIES(Cpp_principles PROPERTIES LINKER_LANGUAGE C)
#set(HEADERS ...)
#add_library(definitions ${HEADERS})
#SET_TARGET_PROPERTIES(definitions PROPERTIES LINKER_LANGUAGE C)
